# transcribe-audio

./: .gitignore  AGENTS.md  README.md  check_output.txt  install.sh  pyproject.toml
docs/: INSTALL.md  SDD-ARCH-python-subtitle-postprocessing.md  SDD-CR-001-integrated-pipeline-readiness.md  SDD-CR-002-media2md-pipeline.md  SDD-CR-003-single-file-selector-input.md  SDD-CR-004-word-timed-srt-postprocessing.md  SDD-CR-integrated-pipeline-readiness.md  SDD-whisperx-batch-transcribe.md
docs/notes/: WhisperX 在 WSL2 的安裝與使用筆記.md
src/transcribe_audio/: __init__.py  cleaning.py  display_width.py  models.py  segmenter.py  srt_writer.py  subtitle_cli.py  timing.py  validator.py  whisperx_json.py
tests/: test_cleaning.py  test_display_width.py  test_install.py  test_segmenter.py  test_shell_integration.py  test_srt_writer.py  test_subtitle_cli.py  test_timing.py  test_validator.py  test_whisperx_json.py
tests/fixtures/: basic_words.expected.srt  basic_words.input.json
